grpc/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/grpc-services: adservice
  name: ob-ingress
  namespace: hipstershop
spec:
  rules:
  - host: online-boutique.arcadia-finance.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          serviceName: adservice
          servicePort: 9555
        path: /hipstershop.AdService
        pathType: ImplementationSpecific
  - host: app-protect.online-boutique.arcadia-finance.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
      - backend:
          serviceName: adservice
          servicePort: 9555
        path: /hipstershop.AdService
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - online-boutique.arcadia-finance.io
    - app-protect.online-boutique.arcadia-finance.io
    secretName: tls-secret
